--- a/IntelitraderMobile/IntelitraderMobile/Views/InfoUsuario.xaml
+++ b/IntelitraderMobile/IntelitraderMobile/Views/InfoUsuario.xaml
@@ -3,12 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IntelitraderMobile.Views.InfoUsuario">
     <ContentPage.Content>
-        <StackLayout Spacing="40">
-
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Id:" />
-                <Label x:Name="id" Text="{Binding id}" />
-            </StackLayout>
+        <StackLayout Spacing="30">
             <StackLayout>
                 <Label Text="firstName" />
                 <Entry x:Name="firstName" Text="{Binding firstName}" />
@@ -26,7 +21,7 @@
                 <Label x:Name="creationDate" Text="{Binding creationDate}" />
             </StackLayout>
             <Button x:Name="Botao" Text="Atualizar"/>
-            <Label x:Name="Resposta"/>
+            <Label x:Name="Resposta" FontSize="Medium" TextColor="Black"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
